# libdivecomputer-rs

./: .gitignore  .gitmodules  .taplo.toml  CLAUDE.md  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
libdivecomputer/: Cargo.toml  README.md
libdivecomputer-sys/: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE-MIT  README.md  build.rs  compile_flags.txt  man.sh  wrapper.h
libdivecomputer-sys/examples/: list.rs  version.rs
libdivecomputer/examples/: device_download.rs  device_scanner.rs  dive_parser.rs
libdivecomputer/src/: android.rs  buffer.rs  common.rs  context.rs  datetime.rs  descriptor.rs  device.rs  error.rs  family.rs  iostream.rs  iterator.rs  lib.rs  parser.rs  scanner.rs  status.rs  transport.rs  version.rs
libdivecomputer/src/ble/: mod.rs  services.rs
libdivecomputer/src/bluetooth/: android.rs  mod.rs
libdivecomputer/src/device/: ble.rs
libdivecomputer/src/device/ble/: android.rs
libdivecomputer/src/parser/: types.rs
