[workspace]
resolver = "2"
members  = ["libdivecomputer", "libdivecomputer-sys"]

[workspace.package]
version      = "0.2.0"
edition      = "2024"
rust-version = "1.87"
authors      = ["Carl Gunnarsson <me@carlg.tech>"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/theCarlG/libdivecomputer-rs"
readme       = "README.md"
keywords     = ["divecomputer"]

[patch.crates-io]
# Fork that adds two droidplug extensions off the upstream 0.12.0 tag
# (branch cg/peripheral-id-from-mac):
#   1. public From<BDAddr> for PeripheralId, so we can reach
#      Central::add_peripheral with a stored MAC and skip the 5 s scan.
#   2. Adapter::add_peripheral_with_address_type, which funnels through
#      BluetoothAdapter.getRemoteLeDevice(address, ADDRESS_TYPE_RANDOM) on
#      API 30+. Mirrors Subsurface's setRemoteAddressType(RandomAddress)
#      workaround for Shearwater/Garmin dive computers.
btleplug = { git = "https://forgejo.in.carlg.tech/cg/btleplug.git", branch = "cg/peripheral-id-from-mac" }
