[package]
name         = "libdivecomputer-sys"
description  = "Unsafe bindings for libdivecomputer"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
license      = "(MIT OR Apache-2.0) AND LGPL-2.1"
repository   = { workspace = true }
build        = "build.rs"
readme       = { workspace = true }
keywords     = { workspace = true }
categories   = ["external-ffi-bindings"]

[dependencies]

[build-dependencies]
bindgen = "0.72.0"
cc = "1"
